--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
-name: Video + Audio Stream (Loop & Auto-Restart)
+name: Video + Audio Stream (Auto-Schedule & Copyright Protected)
 
 on:
+  schedule:
+    # 8:00 AM IST = 2:30 AM UTC
+    - cron: '30 2 * * *'
   workflow_dispatch:
   repository_dispatch:
     types: [restart_stream]
@@ -24,9 +27,9 @@ jobs:
           STREAM_URL: "rtmp://a.rtmp.youtube.com/live2/k4bv-wakv-50ad-uas6-8rtr"
           GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
-          echo "Streaming starting with Copyright Protection (Pitch & Speed Filter)..."
+          echo "Streaming starting at scheduled time with Copyright Protection..."
           
-          # FFmpeg command with Audio Pitch/Speed filters for copyright protection
+          # FFmpeg with Audio Pitch (1.02) & Speed (1.02) to avoid copyright
           ffmpeg -re \
             -stream_loop -1 -i video.mp4 \
             -stream_loop -1 -i audio.mp3 \
